--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <script src="js/scripts.js"></script>
   </head>
   <body>
-
+    <div class="container">
+      <div class="jumbotron">
+        <h1>WELCOME!</h1>
+        <h2>Please, enter a number of your choice.</h2>
+        <h3>For your protection, the systems have automatically limited numbers to 100 or less.</h3>
+        <h4>Thank you.</h4>
+      </div>
+    </div>
   </body>
 </html>
