--- a/index.html
+++ b/index.html
@@ -10,11 +10,17 @@
   <body>
     <div class="container">
       <div class="jumbotron">
-        <h1>WELCOME!</h1>
-        <h2>Please, enter a number of your choice.</h2>
-        <h3>For your protection, the systems have automatically limited numbers to 100 or less.</h3>
+        <h1>WELCOME TO SYSTEM DIAGNOSTICS.</h1>
+        <h2>Please, enter an integer of your choice.</h2>
+        <h3>For your protection, the systems have automatically limit sample sizes to 100,000,000,000.</h3>
         <h4>Thank you.</h4>
       </div>
+      <form id="userNumber">
+        <div class="form-group">
+          <input id="userInput" type="number">
+        </div>
+        <button type="submit" class="btn btn-danger" id="testButton"><h3>Test system processes. Please enter a number.</h3></button>
+      </form>
     </div>
   </body>
 </html>
