Add first check for zero, but results not displaying for any input.

--- a/index.html
+++ b/index.html
@@ -22,5 +22,7 @@
         <button type="submit" class="btn btn-danger" id="testButton"><h3>Test system processes. Please enter a number.</h3></button>
       </form>
     </div>
+    <div id="output">
+    </div>
   </body>
 </html>
